src/test/deca/syntax/invalid/lex_int_invalid.deca
// Test d'un entier trop grand
// sortie IllegalArgument line 1
2147483649

